Removing not visible docs node checkboxes to fix tabnav

--- a/src/step/src/assets/base.scss
+++ b/src/step/src/assets/base.scss
@@ -188,6 +188,8 @@ a {
   text-decoration: none;
   color: var(--color-button);
   transition: 0.4s;
+  display: flex;
+  padding-inline: .25ch;
 }
 
 @media (hover: hover) {
